[build-system]
requires = ['setuptools ~= 40.8.0']
build-backend = 'setuptools.build_meta'

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py36
    py37
[testenv]
minversion = 3.7.0
isolated_build = true
deps =
    pytest ~= 4.2.0
    pytest-bandit ~= 0.3.1
    pytest-cov ~= 2.6.1
    pytest-mypy ~= 0.3.2
    pytest-pylint ~= 0.14.0
    pytest-randomly ~= 1.2.0

commands =
    searents --help
    searents-parse --help
    pytest --cov searents --mypy-ignore-missing-imports --pylint {posargs}

[testenv:dev]
basepython = python3.7
usedevelop = true
commands = {posargs:python}
"""
